@@ -1,1 +1,2 @@
 -Figure out what to do with the rediculous exception handling in InputThread
+-Figure out better User.toString() method;
